k8s/service.yaml
# service.yaml - Otus Model as a Service
apiVersion: v1
kind: Service
metadata:
  name: otus-maas-service
  namespace: otus-maas
  labels:
    app: otus-maas
spec:
  selector:
    app: otus-maas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
